common-version/staging/frontend/nvl-dashboard-fe/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: fe-dashboard
  name: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dashboard.annasik.my.id
      secretName: dashboard-tls
  rules:
    - host: dashboard.annasik.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard-services-svc
                port:
                  number: 3000
